tracer_backend/include/tracer_backend/controller/frida_controller.h

#ifndef FRIDA_CONTROLLER_H
#define FRIDA_CONTROLLER_H

#include <tracer_backend/utils/tracer_types.h>
#include <frida-core.h>

#ifdef __cplusplus
extern "C" {
#endif

// Forward declarations
typedef struct FridaController FridaController;

// Controller lifecycle
FridaController* frida_controller_create(const char* output_dir);
void frida_controller_destroy(FridaController* controller);

// Process management
int frida_controller_spawn_suspended(FridaController* controller, 
                                     const char* path, 
                                     char* const argv[],
                                     uint32_t* out_pid);
int frida_controller_attach(FridaController* controller, uint32_t pid);
int frida_controller_detach(FridaController* controller);
int frida_controller_resume(FridaController* controller);
int frida_controller_pause(FridaController* controller);

/**
 * @brief Install hooks into the target process
 * 
 * @param controller the FridaController instance
 * @return int 0 on success, -1 on failure
 *
 * The agent library is searched for in the paths specified by an 
 * environment variable <code>ADA_AGENT_RPATH_SEARCH_PATHS</code>.
 *
 * <code>ADA_AGENT_RPATH_SEARCH_PATHS</code> is a colon-separated list of
 * paths to search for the agent library.
 *
 */
int frida_controller_install_hooks(FridaController* controller);

/**
 * @brief Inject the agent into the target process
 * 
 * @param controller the FridaController instance
 * @param agent_path the path to the agent library
 * @return int 0 on success, -1 on failure
 */
int frida_controller_inject_agent(FridaController* controller, const char* agent_path);

// Flight recorder control
int frida_controller_arm_trigger(FridaController* controller,
                                 uint32_t pre_roll_ms,
                                 uint32_t post_roll_ms);
int frida_controller_fire_trigger(FridaController* controller);
int frida_controller_disarm_trigger(FridaController* controller);
int frida_controller_set_detail_enabled(FridaController* controller, uint32_t enabled);
int frida_controller_start_session(FridaController* controller);
int frida_controller_stop_session(FridaController* controller);

// Statistics
TracerStats frida_controller_get_stats(FridaController* controller);

// State query
ProcessState frida_controller_get_state(FridaController* controller);
FlightRecorderState frida_controller_get_flight_state(FridaController* controller);

#ifdef __cplusplus
}
#endif

#endif // FRIDA_CONTROLLER_H